[build-system]
requires = ["setuptools", ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["underway"]

[project]
name = "underway"
version = "2024.11"
authors = [
    {name = "Gunnar Voet", email = "gvoet@ucsd.edu"},
    ]
description = "research vessel underway data handling"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["physical oceanography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Oceanography",
    ]
requires-python = ">= 3.9"
dependencies = ["numpy", "pandas", "xarray", "pynmeagps"],

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://gunnarvoet.github.io/underway/underway.html"
Repository = "https://github.com/gunnarvoet/underway.git"
Issues = "https://github.com/gunnarvoet/underway/issues"
Changelog = "https://github.com/gunnarvoet/underway/blob/main/HISTORY.md"

[tool.pytest.ini_options]
# in general, do not place a `__init__.py` in your tests
# options are explained here:
# https://learn.scientific-python.org/development/guides/pytest/
minversion = "6.0"
# addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
addopts = []
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
    "underway/tests",
    ]
